# mcp-server

./: Dockerfile  README.md  main.py  pyproject.toml  server.py
mcp-server/: Dockerfile  pyproject.toml
