[project]
name = "mcp_server_test1"
version = "0.1.0"
description = "Add your description here"
# readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "PyPDF2",
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
# 
# [tool.hatch.build.targets.wheel]
# # Include server.py directly in the wheel
# force-include = { "server.py" = "server.py" } 